# HappyPilot

./: .gitignore  README.md  README_CN.md
design/: system_architecture.mdj  system_architecture_design.md
doc/: autoware_auto_arch_design.mdj  autoware_auto解析.md
src/common/avp_algorithm/: CMakeLists.txt  package.xml
src/common/avp_algorithm/design/: avp_algorithm-design.md
src/common/avp_algorithm/include/avp_algorithm/: avp_algorithm.hpp  quick_sort.hpp
src/common/avp_algorithm/test/src/: test_quick_sort_iterative.cpp
src/common/joy_algorithm/: CMakeLists.txt  package.xml
src/common/joy_algorithm/design/: joy_algorithm-design.md
src/common/joy_algorithm/include/joy_algorithm/: joy_algorithm.hpp  quick_sort.hpp
src/common/joy_common/: CMakeLists.txt  package.xml
src/common/joy_common/design/: joy_common-design.md
src/common/joy_common/include/joy_common/: file_system.hpp  joy_types.hpp
src/common/joy_msg/: CMakeLists.txt  package.xml
src/drivers/socketcan/: CMakeLists.txt  package.xml
src/drivers/socketcan/design/: socket_can-design.md
src/drivers/socketcan/include/socketcan/: socket_can_id.hpp  socket_can_receiver.hpp  socket_can_sender.hpp
src/drivers/socketcan/src/: socket_can_common.cpp  socket_can_common.hpp  socket_can_id.cpp  socket_can_receiver.cpp  socket_can_sender.cpp
src/sim_carla/carla_interface/: CMakeLists.txt  package.xml
src/sim_carla/carla_interface/design/: carla_interface-design.md
src/sim_carla/carla_interface/include/carla_interface/: carla_interface_node.hpp
src/sim_carla/carla_interface/launch/: carla_interface.launch.py
src/sim_carla/carla_interface/src/: carla_interface.cpp  carla_interface_node.cpp
src/sim_carla/carla_interface/test/: test_carla_interface.cpp
src/sim_carla_interface/carla_ad_agent/: CMakeLists.txt  package.xml  setup.py
src/sim_carla_interface/carla_ad_demo/: CMakeLists.txt  package.xml
src/sim_carla_interface/carla_ros_bridge/: CMakeLists.txt  package.xml  setup.py
src/sim_carla_interface/carla_waypoint_publisher/: CMakeLists.txt  package.xml  setup.py
src/sim_ood/ood_demo/: package.xml  setup.cfg  setup.py
src/sim_ood/ood_demo/ood_demo/: ood_demo.py
src/tools/joy_avp_demo/: CMakeLists.txt  package.xml
src/tools/joy_avp_demo/design/: avp_demo-design.md  joy_avp_demo-design.md
src/tools/joy_avp_demo/include/joy_avp_demo/: joy_avp_demo.hpp  joy_avp_demo_node.hpp
src/tools/joy_avp_demo/launch/: joy_avp_demo.launch.py
src/tools/joy_avp_demo/src/: joy_avp_demo.cpp  joy_avp_demo_node.cpp
src/tools/joy_avp_demo/test/: test_joy_avp_demo.cpp
src/tools/joy_create_pkg/: CMakeLists.txt  README.md  package.xml
src/tools/joy_create_pkg/joy_create_pkg/: main.py
src/tools/joy_create_pkg/joy_create_pkg/template/: CMakeLists.txt  package.xml
src/tools/joy_create_pkg/joy_create_pkg/template/include/hello_world/: hello_world.hpp  hello_world_node.hpp
src/tools/joy_create_pkg/joy_create_pkg/template/launch/: hello_world.launch.py
src/tools/joy_create_pkg/joy_create_pkg/template/src/: hello_world.cpp  hello_world_node.cpp
src/tools/joy_create_pkg/joy_create_pkg/template/test/: test_hello_world.cpp
