<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joy_common</name>
  <version>1.0.0</version>
  <description>common types, filesystem</description>
  <maintainer email="yjd2008@hotmail.com">andy</maintainer>
  <license>GPL-v3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
