<?xml version="1.0"?>
<package format="3">
  <name>carla_ad_agent</name>
  <version>0.0.1</version>
  <description>The carla_ad_agent package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <exec_depend>carla_waypoint_types</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>ros_compatibility</exec_depend>

  <depend condition="$ROS_VERSION == 2">rclpy</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
