<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ood_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yjd2008@hotmail.com">andy</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>carla_waypoint_types</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>ros_compatibility</exec_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
